--- a/_notebooks/2024-03-07-csvdatabase.ipynb
+++ b/_notebooks/2024-03-07-csvdatabase.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -56,14 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['opp', 'mp', 'pts', 'ast', 'drb', 'stl', 'blk', 'tov'], dtype='object')\n"
+      "Index(['opp', 'mp', 'pts', 'fga', 'fgp', 'ast', 'orb', 'drb', 'stl', 'blk',\n",
+      "       'tov'],\n",
+      "      dtype='object')\n"
      ]
     },
     {
@@ -90,7 +92,10 @@
        "      <th>opp</th>\n",
        "      <th>mp</th>\n",
        "      <th>pts</th>\n",
+       "      <th>fga</th>\n",
+       "      <th>fgp</th>\n",
        "      <th>ast</th>\n",
+       "      <th>orb</th>\n",
        "      <th>drb</th>\n",
        "      <th>stl</th>\n",
        "      <th>blk</th>\n",
@@ -101,9 +106,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>SAC</td>\n",
-       "      <td>42:00</td>\n",
+       "      <td>2520</td>\n",
        "      <td>25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.600</td>\n",
        "      <td>9</td>\n",
+       "      <td>2</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
@@ -112,9 +120,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>PHO</td>\n",
-       "      <td>41:00</td>\n",
+       "      <td>2460</td>\n",
        "      <td>21</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.471</td>\n",
        "      <td>8</td>\n",
+       "      <td>2</td>\n",
        "      <td>10</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -123,9 +134,12 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>POR</td>\n",
-       "      <td>39:00</td>\n",
+       "      <td>2340</td>\n",
        "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.250</td>\n",
        "      <td>6</td>\n",
+       "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -134,9 +148,12 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>DEN</td>\n",
-       "      <td>41:00</td>\n",
+       "      <td>2460</td>\n",
        "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.273</td>\n",
        "      <td>7</td>\n",
+       "      <td>2</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -145,9 +162,12 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>IND</td>\n",
-       "      <td>44:00</td>\n",
+       "      <td>2640</td>\n",
        "      <td>23</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.444</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -163,13 +183,19 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1127</th>\n",
        "      <td>PHO</td>\n",
-       "      <td>33:13</td>\n",
+       "      <td>1993</td>\n",
        "      <td>28</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.500</td>\n",
        "      <td>11</td>\n",
+       "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
@@ -178,9 +204,12 @@
        "    <tr>\n",
        "      <th>1128</th>\n",
        "      <td>POR</td>\n",
-       "      <td>41:05</td>\n",
+       "      <td>2465</td>\n",
        "      <td>35</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0.600</td>\n",
        "      <td>6</td>\n",
+       "      <td>0</td>\n",
        "      <td>14</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -189,9 +218,12 @@
        "    <tr>\n",
        "      <th>1129</th>\n",
        "      <td>CHI</td>\n",
-       "      <td>39:53</td>\n",
+       "      <td>2393</td>\n",
        "      <td>33</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.577</td>\n",
        "      <td>12</td>\n",
+       "      <td>1</td>\n",
        "      <td>12</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
@@ -200,9 +232,12 @@
        "    <tr>\n",
        "      <th>1130</th>\n",
        "      <td>MIL</td>\n",
-       "      <td>40:01</td>\n",
+       "      <td>2401</td>\n",
        "      <td>40</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0.552</td>\n",
        "      <td>10</td>\n",
+       "      <td>5</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -211,9 +246,12 @@
        "    <tr>\n",
        "      <th>1131</th>\n",
        "      <td>TOR</td>\n",
-       "      <td>39:24</td>\n",
+       "      <td>2364</td>\n",
        "      <td>35</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.579</td>\n",
        "      <td>17</td>\n",
+       "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -221,24 +259,24 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1132 rows × 8 columns</p>\n",
+       "<p>1132 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      opp     mp  pts  ast  drb  stl  blk  tov\n",
-       "0     SAC  42:00   25    9    4    4    0    2\n",
-       "1     PHO  41:00   21    8   10    1    0    7\n",
-       "2     POR  39:00    8    6    4    2    0    2\n",
-       "3     DEN  41:00    7    7    9    2    3    2\n",
-       "4     IND  44:00   23    3    5    0    0    7\n",
-       "...   ...    ...  ...  ...  ...  ...  ...  ...\n",
-       "1127  PHO  33:13   28   11   12    3    2    5\n",
-       "1128  POR  41:05   35    6   14    2    3    6\n",
-       "1129  CHI  39:53   33   12   12    1    2    6\n",
-       "1130  MIL  40:01   40   10    7    2    1    6\n",
-       "1131  TOR  39:24   35   17    6    1    0    0\n",
+       "      opp    mp  pts  fga    fgp  ast  orb  drb  stl  blk  tov\n",
+       "0     SAC  2520   25   20  0.600    9    2    4    4    0    2\n",
+       "1     PHO  2460   21   17  0.471    8    2   10    1    0    7\n",
+       "2     POR  2340    8   12  0.250    6    0    4    2    0    2\n",
+       "3     DEN  2460    7   11  0.273    7    2    9    2    3    2\n",
+       "4     IND  2640   23   18  0.444    3    0    5    0    0    7\n",
+       "...   ...   ...  ...  ...    ...  ...  ...  ...  ...  ...  ...\n",
+       "1127  PHO  1993   28   14  0.500   11    0   12    3    2    5\n",
+       "1128  POR  2465   35   25  0.600    6    0   14    2    3    6\n",
+       "1129  CHI  2393   33   26  0.577   12    1   12    1    2    6\n",
+       "1130  MIL  2401   40   29  0.552   10    5    7    2    1    6\n",
+       "1131  TOR  2364   35   19  0.579   17    1    6    1    0    0\n",
        "\n",
-       "[1132 rows x 8 columns]"
+       "[1132 rows x 11 columns]"
       ]
      },
      "metadata": {},
@@ -247,7 +285,7 @@
    ],
    "source": [
     "# Selecting only required columns\n",
-    "selected_columns = ['opp', 'mp', 'pts', 'ast', 'drb', 'stl', 'blk', 'tov']\n",
+    "selected_columns = ['opp', 'mp', 'pts', 'fga', 'fgp', 'ast', 'orb', 'drb', 'stl', 'blk', 'tov']\n",
     "lebron_career_cleaned = lebron_career_df[selected_columns].copy()\n",
     "\n",
     "# You may need to handle missing values if any\n",
@@ -272,33 +310,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average stats for the last 10 matchups against GSW :\n",
-      "Minutes played: 37.1\n",
-      "Points: 27.3\n",
-      "Assists: 5.4\n",
-      "Defensive rebounds: 6.9\n",
-      "Steals: 1.4\n",
-      "Blocks: 1.0\n",
-      "Turnovers: 5.0\n"
+      "Average stats for the last 10 matchups against LAL :\n",
+      "Minutes played: 36.0\n",
+      "Points: 26.6\n",
+      "Field Goal Percentage: 51.5\n",
+      "Assists: 7.6\n",
+      "Rebounds: 8.2\n",
+      "Steals: 1.1\n",
+      "Blocks: 0.7\n",
+      "Turnovers: 3.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3l/zzpb17n16zq0yrbx8c40rps40000gp/T/ipykernel_62886/1288292844.py:31: SettingWithCopyWarning: \n",
+      "/var/folders/3l/zzpb17n16zq0yrbx8c40rps40000gp/T/ipykernel_71181/1574377123.py:31: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  last_10_games['mp'] = last_10_games['mp'].apply(convert_to_minutes)\n"
+      "  last_10_games['mp'] = last_10_games['mp'].apply(convert_to_minutes)\n",
+      "/var/folders/3l/zzpb17n16zq0yrbx8c40rps40000gp/T/ipykernel_71181/1574377123.py:34: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  last_10_games['rebounds'] = last_10_games['drb'] + last_10_games['orb']\n",
+      "/var/folders/3l/zzpb17n16zq0yrbx8c40rps40000gp/T/ipykernel_71181/1574377123.py:37: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  last_10_games['fg_percentage'] = (last_10_games['fg'] / last_10_games['fga']) * 100\n"
      ]
     }
    ],
@@ -309,7 +360,7 @@
     "lebron_career_df = pd.read_csv('/Users/Jayden.Chen/vscode/csp/modeldata/lebron_career.csv')\n",
     "\n",
     "# Select relevant columns\n",
-    "selected_columns = ['opp', 'mp', 'pts', 'ast', 'drb', 'stl', 'blk', 'tov']\n",
+    "selected_columns = ['opp', 'mp', 'pts', 'ast', 'orb', 'drb', 'stl', 'blk', 'tov', 'fg', 'fga']\n",
     "\n",
     "# Filter data for a specific opponent\n",
     "def filter_opponent(data, opponent):\n",
@@ -335,8 +386,14 @@
     "\n",
     "last_10_games['mp'] = last_10_games['mp'].apply(convert_to_minutes)\n",
     "\n",
-    "# Calculate average stats for minutes played, points, assists, defensive rebounds, steals, blocks, and turnovers\n",
-    "average_stats = last_10_games[['mp', 'pts', 'ast', 'drb', 'stl', 'blk', 'tov']].mean()\n",
+    "# Calculate rebounds as offensive and defensive combined\n",
+    "last_10_games['rebounds'] = last_10_games['drb'] + last_10_games['orb']\n",
+    "\n",
+    "# Calculate field goal percentage\n",
+    "last_10_games['fg_percentage'] = (last_10_games['fg'] / last_10_games['fga']) * 100\n",
+    "\n",
+    "# Calculate average stats for minutes played, points, assists, rebounds, steals, blocks, turnovers, and field goal percentage\n",
+    "average_stats = last_10_games[['mp', 'pts', 'ast', 'rebounds', 'stl', 'blk', 'tov', 'fg_percentage']].mean()\n",
     "\n",
     "# Round average stats to the nearest tenth value\n",
     "average_stats_rounded = average_stats.round(1)\n",
@@ -346,10 +403,11 @@
     "\n",
     "# Print average stats\n",
     "print(\"Average stats for the last 10 matchups against\", opponent, \":\")\n",
-    "print(\"Minutes played:\", average_minutes_played_hours,)\n",
+    "print(\"Minutes played:\", average_minutes_played_hours)\n",
     "print(\"Points:\", average_stats_rounded['pts'])\n",
+    "print(\"Field Goal Percentage:\", average_stats_rounded['fg_percentage'])\n",
     "print(\"Assists:\", average_stats_rounded['ast'])\n",
-    "print(\"Defensive rebounds:\", average_stats_rounded['drb'])\n",
+    "print(\"Rebounds:\", average_stats_rounded['rebounds'])\n",
     "print(\"Steals:\", average_stats_rounded['stl'])\n",
     "print(\"Blocks:\", average_stats_rounded['blk'])\n",
     "print(\"Turnovers:\", average_stats_rounded['tov'])\n"
