--- a/_posts/2024-03-14-Tri3Seed.md
+++ b/_posts/2024-03-14-Tri3Seed.md
@@ -3,7 +3,7 @@ title: Seed
 layout: post 
 type: tangibles
 courses: { "compsci": {week: 20 }}
-permalink: seed
+permalink: /seed
 ---
 
 ## Individual
